# SA-SegFormer-RTS-open

./: .gitattributes  .gitignore  CITATION.cff  DATA_LICENSE  LICENSE  README.md  ZENODO_DATASET_README.md  pyproject.toml  requirements.txt
baselines/: README.md  train_ca_convnext.py  train_ca_segformer.py  train_cnn.py  train_convnext.py  train_deeplabv3plus.py  train_resnet.py  train_sa_convnext.py  train_sa_segformer.py  train_segformer.py  train_swin.py  train_unet.py  train_unetpp.py
baselines/legacy/: 1-Convnext.py  1.1-Convnext-tiflable.py  1.2-Convnext-增强版.py  10-CA-Segformer多特征.py  11-unet.py  12-unet++.py  13-deeplabv3+.py  14-convnext.py  15-cnn.py  16-swin.py  17-resnet.py  5-多模型完整框架.py  5.1-更多模型完整框架.py  6-Unet.py  7-Convnext推理.py  7.1-SA-Convnext推理.py  7.2-CA-Convnext.py  7.3-SA-Convnext.py
configs/: sa_segformer.yaml
data/: README.md
data/manifests/: dataset_summary.csv  manifest_2023.csv  manifest_2023_split_837_179_179.csv  manifest_2024.csv
scripts/: eval_region_holdout.py  eval_temporal_transfer.py  infer_sa_segformer.py  summarize_dataset.py  train_baseline.py  train_sa_segformer.py
scripts/analysis/legacy/: 8-不同模型的loss曲线.py  8.1-不同模型分组绘图loss.py  collect_region_holdout_summary.py  性能指标图.py
scripts/data/: build_manifests.py  create_fixed_split.py
scripts/data/legacy/: 2-标签二值化.py  3-四个区域的数据合并到一起.py  (+1 more)
slurm/: run_baseline.slurm  run_region_holdout.slurm  run_sa_segformer.slurm  run_temporal_transfer.slurm
src/sa_segformer_rts/: __init__.py  baselines.py  constants.py  data.py  metrics.py  model.py  train.py  utils.py  visualize.py
